[Mac][Material Design] Add temporary spinner for Incognito mode.

The tab spinner on the Mac will be replaced by a Material Design version
in a future cl. Until then, we need a white version of the current
spinner so that it's visible on Incognito tabs.

R=cpu@chromium.org
BUG=618778

Review-Url: https://codereview.chromium.org/2092193004
Cr-Commit-Position: refs/heads/master@{#402316}