chrome/browser/ui/cocoa/tabs/tab_strip_controller.mm
@@ -41,6 +41,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "chrome/browser/ui/cocoa/tabs/tab_strip_model_observer_bridge.h"
 #import "chrome/browser/ui/cocoa/tabs/tab_strip_view.h"
 #import "chrome/browser/ui/cocoa/tabs/tab_view.h"
+#import "chrome/browser/ui/cocoa/themed_window.h"
 #include "chrome/browser/ui/find_bar/find_bar.h"
 #include "chrome/browser/ui/find_bar/find_bar_controller.h"
 #include "chrome/browser/ui/find_bar/find_tab_helper.h"
@@ -1532,9 +1533,15 @@ private:
   static NSImage* throbberWaitingImage =
       ResourceBundle::GetSharedInstance().GetNativeImageNamed(
           IDR_THROBBER_WAITING).CopyNSImage();
+  static NSImage* throbberWaitingIncognitoImage =
+      ResourceBundle::GetSharedInstance().GetNativeImageNamed(
+          IDR_THROBBER_WAITING_INCOGNITO).CopyNSImage();
   static NSImage* throbberLoadingImage =
       ResourceBundle::GetSharedInstance().GetNativeImageNamed(
           IDR_THROBBER).CopyNSImage();
+  static NSImage* throbberLoadingIncognitoImage =
+      ResourceBundle::GetSharedInstance().GetNativeImageNamed(
+          IDR_THROBBER_INCOGNITO).CopyNSImage();
   static NSImage* sadFaviconImage =
       ResourceBundle::GetSharedInstance()
           .GetNativeImageNamed(IDR_CRASH_SAD_FAVICON)
@@ -1557,10 +1564,20 @@ private:
     newHasIcon = true;
   } else if (contents->IsWaitingForResponse()) {
     newState = kTabWaiting;
-    throbberImage = throbberWaitingImage;
+    if (ui::MaterialDesignController::IsModeMaterial() &&
+        [[[tabController view] window] inIncognitoMode]) {
+      throbberImage = throbberWaitingIncognitoImage;
+    } else {
+      throbberImage = throbberWaitingImage;
+    }
   } else if (contents->IsLoadingToDifferentDocument()) {
     newState = kTabLoading;
-    throbberImage = throbberLoadingImage;
+    if (ui::MaterialDesignController::IsModeMaterial() &&
+        [[[tabController view] window] inIncognitoMode]) {
+      throbberImage = throbberLoadingIncognitoImage;
+    } else {
+      throbberImage = throbberLoadingImage;
+    }
   }
 
   if (oldState != newState)
